--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A node package for checking the validity of ASC FDL file's schema.",
   "type": "module",
   "exports": {
-    ".": "./src/validator.js",
+    ".": "./src/validator.mjs",
     "./package.json": "./package.json"
   },
   "bin": {
